# secprog

./: .gitignore  README.md  Vagrantfile
.github/workflows/: build-test.yml
Exercise1/: CMakeLists.txt  main.cpp
Exercise2/: .gitignore  Exercise2.sln  Exercise2.vcxproj  main.cpp  random_data.txt
Exercise3/: .gitignore  Exercise3.sln  Exercise3.vcxproj  main.cpp  users.txt
Exercise4/: .gitignore  Exercise4.sln  Exercise4.vcxproj  main.cpp
Exercise6/: Exercise6.sln  Exercise6.vcxproj  main.cpp
SecureWebApp/: Program.cs  SecureWebApp.csproj  SecureWebApp.sln  Startup.cs  appsettings.json
SecureWebApp.Tests/: PwnedApiTests.cs  Template.cs
SecureWebApp/Areas/Identity/: IdentityHostingStartup.cs
SecureWebApp/Areas/Identity/Pages/Account/: ConfirmEmailChange.cshtml.cs  Lockout.cshtml  Lockout.cshtml.cs  Login.cshtml.cs  Register.cshtml.cs  UnlockAccount.cshtml  UnlockAccount.cshtml.cs
SecureWebApp/Interfaces/: IBreachCheckService.cs  IMailService.cs
SecureWebApp/Properties/: launchSettings.json
SecureWebApp/Services/: EmailSenderService.cs  IpAddressService.cs  PasswdsApiCheckService.cs  PwnedApiCheckService.cs
cryptopp-CRYPTOPP_8_4_0/: cryptlib.vcxproj
google-gruyere-fixed/: gruyere.py  gtl.py  sanitize.py
google-gruyere-fixed/resources/: editprofile.gtl  home.gtl  lib.js  snippets.gtl
prov/: fork.sh  params  server.sh
server-fixed/: gtl.py
server-fixed/resources/: feed.gtl  lib.js
server-orig/: gruyere.py
webserver/: cert.pem  csr_details.txt  index.html  key.pem  root.pem  root.srl  rootkey.pem  server.csr  server.pem  server.py
(+3 files in other folders)
